--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
 	margin: 0 auto; padding: 0;
 	font: 0.92em '微軟正黑體', sans-serif;
 }
+
+img {
+	border: none; vertical-align: middle;
+}
+
 .window {
 	display: none;
 	position: absolute;
@@ -39,6 +44,15 @@ body {
 }
 #header #header_user_functions, #header #header_login {
 	float: right;
+}
+
+#footer {
+	margin: 0; padding: 0;
+	border: 1px dashed #999999;
+	height: 5em;
+	font-size: 0.72em;
+	clear: both;
+	text-align: center;
 }
 
 #titleblock {
@@ -102,12 +116,61 @@ body {
 	height: 100px; width: 550px;
 }
 #features {
-	border: 1px dashed #999999;
 }
 #features .feature {
-	float: left; width: 33%; height: 10em;
+	float: left; width: 298px; height: 10em;
 	border: 1px dashed #999999;
 }
+
+#userinfo {
+	float: left; width: 268px;
+	border: 1px dashed #999999;
+}
+
+#groups {
+	float: right; width: 628px;
+	border: 1px dashed #999999;
+}
+
+#groups-title {
+	float: right; width: 628px;
+	border: 1px dashed #999999;
+}
+
+#groups .group {
+	clear: both;
+}
+
+#groups .group .group-title {
+	border: 1px dashed #999999;
+}
+
+#groups .group .group-title h3 {
+	font-size: 1.2em; font-weight: bold;
+	width: 6em;
+	float: left;
+}
+
+#groups .group .group-addon {
+	clear: both;
+	border: 1px dashed #999999;
+}
+#groups .group .group-addon p {
+	float: left; width: 155px; height: 70px;
+	border: 1px dashed #999999;
+}
+
+#groups .group .group-addon p img {
+	display: block; margin: 3px 61px;
+	border: 1px dashed #999999;
+	width: 32px; height: 32px;
+}
+
+#groups .group .group-addon p span {
+	display: block; width: 100%;
+	text-align: center;
+}
+
 #featureselection {
 	border: 1px dashed #999999;
 }
