--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html {
 body {
 	width: 900px;
 	margin: 0 auto; padding: 0;
-	font: 0.92em '文泉驛正黑', sans-serif;
+	font: 0.92em '文泉驛正黑','微軟正黑體', sans-serif;
 }
 
 img {
