--- a/style.css
+++ b/style.css
@@ -50,29 +50,28 @@ img {
 }
 
 #titleblock {
-	border: 1px dashed #999999;
-	height: 320px;
+	background: transparent url('/images/titleblock.jpg') center top no-repeat;
+	height: 345px;
 	position: relative;
-	margin-top: 50px;
 }
 #titleblock h1 {
 	font-size: 1em;
 }
 #titleblock #title-avatar {
 	position: absolute;
-	top: 50px; left: 300px;
-	height: 60px; width: 60px;
+	top: 87px; left: 323px;
+	height: 65px; width: 65px;
 	overflow: hidden;
 	border: 1px dashed #999999;
 }
 #titleblock #title-avatar img {
-	width: 60px;
+	width: 65px;
 }
 #titleblock #title-name, #titleblock #title-name-edit input {
 	position: absolute;
-	top: 50px; left: 370px;
+	top: 87px; left: 396px;
 	height: 40px; width: 230px;
-	font-size: 40px; line-height: 40px;
+	font-size: 36px; line-height: 40px;
 	white-space: nowrap;
 }
 #titleblock #title-name-edit input {
@@ -80,44 +79,64 @@ img {
 }
 #titleblock #title-1 {
 	position: absolute;
-	top: 90px; left: 370px;
+	top: 135px; left: 396px;
 	height: 20px; width: 230px;
-	font-size: 20px; line-height: 20px;
+	font-size: 18px; line-height: 20px;
 	white-space: nowrap;
 }
 #titleblock #title-2 {
 	position: absolute;
-	top: 120px; left: 300px;
-	height: 100px; width: 500px;
-	font-size: 100px; line-height: 100px;
+	background: transparent url('/images/title-2.jpg') center top no-repeat;
+	top: 163px; left: 321px;
+	height: 77px; width: 273px;
+	font-size: 77px; line-height: 77px; color: #ff9900;
+	text-indent: -100000px;
 	white-space: nowrap;
 }
 #titleblock #title-3 {
 	position: absolute;
-	top: 190px; left: 650px;
+	top: 205px; left: 600px;
 	height: 30px; width: 100px;
 	font-size: 30px; line-height: 30px;
 	white-space: nowrap;
 }
-#titleblock .downloadframeborder {
+
+#titleblock .download {
 	position: absolute;
-	top: -40px; left: 600px;
-	background-color: #94B2BC;
-}
-#titleblock .downloadframeborder .downloadframe {
-	height: 160px; width: 325px;
-	background-color: #FFFFFF;
-}
-#titleblock .downloadframeborder .downloadframe .download {
-	margin-left: 10px; margin-top: 20px;
-	height: 100px; width: 300px;
-	background-color: #C4EFA1;
+	top: 37px; left: 600px;
+	width: 260px; height: 85px;
 	border: 1px dashed #999999;
 }
+#titleblock .download p {
+	margin: 0; padding: 0;
+}
+#titleblock .download .link {
+	position: absolute;
+	top: 15px; left: 70px;
+	height: 30px; width: 148px;
+	font-size: 30px; line-height: 30px;
+}
+#titleblock .download .version {
+	position: absolute;
+	top: 55px; left: 70px;
+	height: 15px; width: 180px;
+	font-size: 15px; line-height: 15px;
+	white-space: nowrap;
+}
+#titleblock .count {
+	position: absolute;
+	top: 110px; left: 600px;
+	width: 260px; height: 16px;
+	font-size: 16px; line-height: 16px;
+	text-align: right;
+	white-space: nowrap;
+	border: 1px dashed #999999;
+}
+
 #titleblock .desc {
 	position: absolute;
-	top: 230px; left: 300px;
-	height: 100px; width: 550px;
+	top: 246px; left: 321px;
+	height: 75px; width: 490px;
 }
 #features {
 }
