--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ img {
 
 #header {
 	margin: 0; padding: 0;
-	background: transparent url('/images/header.jpg') center bottom no-repeat;
+	background: transparent url('images/header.jpg') center bottom no-repeat;
 	height: 2.5em;
 	color: #cccccc;
 }
@@ -63,7 +63,7 @@ img {
 }
 
 #titleblock {
-	background: transparent url('/images/titleblock.jpg') center top no-repeat;
+	background: transparent url('images/titleblock.jpg') center top no-repeat;
 	height: 345px;
 	position: relative;
 }
@@ -99,7 +99,7 @@ img {
 }
 #titleblock #title-2 {
 	position: absolute;
-	background: transparent url('/images/title-2.jpg') center top no-repeat;
+	background: transparent url('images/title-2.jpg') center top no-repeat;
 	top: 163px; left: 268px;
 	height: 77px; width: 273px;
 	font-size: 77px; line-height: 77px; color: #ff9900;
