title-2 Firefox word icon redo

--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ img {
 }
 #titleblock #title-2 {
 	position: absolute;
-	background: transparent url('images/title-2.jpg') center top no-repeat;
+	background: transparent url('images/title-2.png') center top no-repeat;
 	top: 163px; left: 268px;
 	height: 77px; width: 273px;
 	font-size: 77px; line-height: 77px; color: #ff9900;
