--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ img {
 	display: none;
 }
 
+.title-placeholder {
+	font-size: 90%;
+}
+
 #titleblock {
 	background: transparent url('images/titleblock.jpg') center top no-repeat;
 	height: 345px;
