--- a/style.css
+++ b/style.css
@@ -62,6 +62,27 @@ img {
 	display: none;
 }
 
+#editor_save {
+	position: relative;
+	background: transparent url('images/editor-save.gif') center top no-repeat;
+	margin: 10px 0 20px 0; padding: 0;
+	width: 900px; z-index: 2;
+}
+
+#editor_save_placeholder {
+	margin: 10px 0 20px 0; padding: 0;
+}
+
+#editor_save p {
+	position: relative; top: 10px;
+	background: transparent url('images/editor-save.gif') center bottom no-repeat;
+	margin: 0; padding: 0 0.5em 10px 0.5em;
+}
+
+#editor_save p button {
+	float: right;
+}
+
 .title-placeholder {
 	font-size: 90%;
 }
