--- a/style.css
+++ b/style.css
@@ -15,9 +15,15 @@ img {
 	border: none; vertical-align: middle;
 }
 
-input, select, textarea, button {
-	font: 0.92em '文泉驛正黑','微軟正黑體', sans-serif;
+input, select, textarea, button, option, optgroup {
+	font: 1em '文泉驛正黑','微軟正黑體', sans-serif;
 	vertical-align: middle;
+}
+
+optgroup {
+	font-weight: bold;
+	text-decoration: none;
+	font-style: normal;
 }
 
 #header {
