--- a/style.css
+++ b/style.css
@@ -106,8 +106,8 @@ input#openid-identifier {
 }
 
 #titleblock {
-	background: transparent url('images/titleblock.jpg') center top no-repeat;
-	height: 345px;
+	background: transparent url('images/titleblock.png') center top no-repeat;
+	height: 308px;
 	position: relative;
 }
 #titleblock h1 {
@@ -115,7 +115,7 @@ input#openid-identifier {
 }
 #titleblock #title-avatar {
 	position: absolute;
-	top: 87px; left: 270px;
+	top: 50px; left: 270px;
 	height: 65px; width: 65px;
 	overflow: hidden;
 }
@@ -129,7 +129,7 @@ input#openid-identifier {
 	white-space: nowrap; overflow: hidden;
 }
 #titleblock #title-name {
-	top: 87px;
+	top: 50px;
 }
 
 #titleblock #title-name.bright {
@@ -137,7 +137,7 @@ input#openid-identifier {
 }
 
 #titleblock #title-name-edit input {
-	top: 82px;
+	top: 45px;
 	display: none;
 }
 #titleblock #title-name-edit input.empty {
@@ -146,7 +146,7 @@ input#openid-identifier {
 }
 #titleblock #title-1 {
 	position: absolute;
-	top: 135px; left: 343px;
+	top: 98px; left: 343px;
 	height: 20px; width: 230px;
 	font-size: 18px; line-height: 20px;
 	white-space: nowrap;
@@ -154,7 +154,7 @@ input#openid-identifier {
 #titleblock #title-2 {
 	position: absolute;
 	background: transparent url('images/title-2.png') center top no-repeat;
-	top: 163px; left: 268px;
+	top: 122px; left: 268px;
 	height: 77px; width: 273px;
 	font-size: 77px; line-height: 77px; color: #ff9900;
 	text-indent: -100000px;
@@ -162,7 +162,7 @@ input#openid-identifier {
 }
 #titleblock #title-3 {
 	position: absolute;
-	top: 205px; left: 547px;
+	top: 168px; left: 547px;
 	height: 30px; width: 100px;
 	font-size: 30px; line-height: 30px;
 	white-space: nowrap;
@@ -170,7 +170,7 @@ input#openid-identifier {
 
 #titleblock .download {
 	position: absolute;
-	top: 28px; left: 640px;
+	top: 28px; left: 630px;
 	width: 230px; height: 70px;
 }
 #titleblock .download p {
@@ -202,7 +202,7 @@ input#openid-identifier {
 #titleblock .count {
 	margin: 0; padding: 0;
 	position: absolute;
-	top: 110px; left: 640px;
+	top: 110px; left: 630px;
 	width: 230px; height: 14px;
 	font-size: 14px; line-height: 14px;
 	text-align: right;
@@ -211,7 +211,7 @@ input#openid-identifier {
 
 #titleblock .desc {
 	position: absolute;
-	top: 246px; left: 268px;
+	top: 209px; left: 268px;
 	height: 75px; width: 540px;
 }
 #features {
