--- a/style.css
+++ b/style.css
@@ -63,18 +63,25 @@ optgroup {
 }
 
 #footer {
-	border-top:1px solid #999999;
-	margin:2em 0;
-	padding:1em 0;
-	text-align:center;
-	clear:both;
-	margin-top:1em;
-	color:#000000;
+	margin: 0; padding: 50px 0 10px 0;
+	background: #ffffff url('images/userpage-block-bg-bottom.jpg') center top no-repeat;
+	clear: both;
 }
 
-#footer p, #footer p a {
-	color:#666666;
-	font-size:small;
+#footer p {
+	color: #666666;
+	font-size: 0.92em;
+	margin: 0.2em 0; padding: 0;
+	text-align: center;
+}
+
+#footer p a {
+	color: #333333;
+	text-decoration: none;
+}
+
+#footer p a:hover {
+	text-decoration: underline;
 }
 
 input#openid-identifier {
@@ -409,6 +416,20 @@ input#openid-identifier {
 	text-align: right;
 	padding: 0 10px 10px 10px;
 	background: #ccffcc url('images/featureselection-corner-bottom.gif') bottom center no-repeat;
+}
+
+.pageblock {
+	background: transparent url('images/userpage-block-bg.jpg') center top repeat-y;
+	margin: 0; padding: 0 0 1.5em 0;
+}
+.pageblock h1 {
+	margin: 0 0 -273px 0; padding: 1em 90px 273px 110px;
+	height: 40px;
+	background: #ffffff url('images/userpage-block-bg-top.png') center 45px no-repeat;
+}
+.pageblock .content {
+	margin: 0; padding: 0 90px 0 110px;
+	min-height: 273px;
 }
 
 .window {
