--- a/style.css
+++ b/style.css
@@ -295,16 +295,50 @@ input#openid-identifier {
 }
 
 #userinfo {
-	float: left; width: 258px;
+	float: left; width: 252px;
 	margin: 2em 0 0 10px;
-	border: 1px solid #999999;
+	border: 4px solid #cccccc;
 	background-color: #ffffff;
-
+	-moz-border-radius: 20px;
 }
 
+#userinfo h2 {
+	margin: 0; padding: 0.5em;
+}
+
+#userinfo ul, #userinfo p {
+	margin: 0; padding: 0.2em 0.7em 1em 0.7em;
+	list-style: none;
+}
+
+#userinfo li {
+	list-style: none;
+}
+
+#userinfo .item {
+	display: block;
+	font-weight: bold;
+	font-size: 0.92em; color: #666666;
+}
+
+#userinfo .value {
+	display: block;
+	padding-left: 5%;
+	width: 95%; white-space: nowrap; overflow: hidden;
+	color: #000000;
+	text-decoration: none;
+}
+
+#userinfo a.value:hover {
+	text-decoration: underline;
+}
+
+#userinfo .bio {
+	white-space: normal;
+}
 #groups {
-	float: right; width: 580px;
-	border: 1px solid #999999;
+	float: right; width: 572px;
+	border: 4px solid #ffff99;
 	border-top: none;
 	border-bottom: none;
 	background-color: #ffffcc;
@@ -315,22 +349,27 @@ input#openid-identifier {
 }
 
 #groups-title, #groups-tail {
-	float: right; width: 580px;
-	border: 1px solid #999999;
+	float: right; width: 572px;
+	border: 4px solid #ffff99;
 	background-color: #ffffcc;
 }
 
 #groups-title {
 	border-bottom: none;
+	-moz-border-radius-topleft: 20px;
+	-moz-border-radius-topright: 20px;
 }
 
 #groups-tail {
 	border-top: none;
+	-moz-border-radius-bottomleft: 20px;
+	-moz-border-radius-bottomright: 20px;
 }
-
 
 #groups .group {
 	clear: both;
+	border: 2px solid #cccccc;
+	-moz-border-radius: 6px;
 }
 
 #groups .not-selected {
@@ -338,7 +377,7 @@ input#openid-identifier {
 }
 
 #groups .group .group-title {
-	border: 1px dashed #999999;
+	background-color: #eeeeee;
 }
 
 #groups .group .group-title input {
@@ -362,7 +401,6 @@ input#openid-identifier {
 
 #groups .group .group-addons {
 	clear: both;
-	border: 1px dashed #999999;
 	min-height: 1em;
 	height: 100%;
 	overflow: auto;
@@ -381,8 +419,11 @@ input#openid-identifier {
 	height: 300px; overflow: auto;
 }
 .addon {
-	float: left; width: 190px; height: 70px;
-	border: 1px dashed #999999;
+	margin: 1px 0;
+	float: left; width: 185px; height: 70px;
+	background-color: #ffffff;
+	border: 2px solid #ccffcc;
+	-moz-border-radius: 6px;
 }
 
 .addon a {
@@ -399,7 +440,7 @@ input#openid-identifier {
 }
 
 .addon img {
-	display: block; margin: 3px 61px;
+	display: block; margin: 3px 76px;
 	width: 32px; height: 32px;
 }
 
