Fill user titles to page elements when updated

--- a/style.css
+++ b/style.css
@@ -121,7 +121,10 @@ input#openid-identifier {
 	float: right;
 }
 
-.title-placeholder {
+span.title-placeholder {
+}
+
+span.title-empty {
 	font-size: 90%;
 }
 
