--- a/style.css
+++ b/style.css
@@ -644,6 +644,26 @@ span.title-empty {
 	float: right; clear: right;
 	color: #666666; font-size: 0.92em;
 }
+.sticker .first-col {
+	width: 230px; float: left; height: 100%; overflow: visible;
+}
+.sticker .col {
+	width: 230px; float: left; height: 100%; overflow: visible;
+}
+
+.sticker .desc {
+	clear: both;
+	padding: 1em 0;
+}
+
+.sticker iframe {
+	border: none;
+}
+
+.sticker textarea {
+	width: 90%;
+	height: 5em;
+}
 
 .editable {
 	cursor: pointer;
