--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ optgroup {
 }
 
 #header {
-	margin: 0; padding: 0;
+	margin: 0 0 10px 0; padding: 0;
 	background: transparent url('images/header.jpg') center bottom no-repeat;
 	height: 2.5em;
 	color: #cccccc;
