--- a/style/language-en.css
+++ b/style/language-en.css
@@ -1,11 +1,20 @@
 @charset "UTF-8";
 
+body,
+input, select, textarea, button, option, optgroup,
+.ui-widget,
+.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button {
+	font-family: 
+		'Arial', 'Verdana', 'Segoe UI', 
+		sans-serif;
+}
+
 body {
-	font: 0.92em arial,verdana,sans-serif;
+	font-size: 0.92em 
 }
 
 input, select, textarea, button, option, optgroup {
-	font: 1em arial,verdana,sans-serif;
+	font-size: 1em
 }
 
 #header #header_top_link a {
@@ -16,6 +25,3 @@ input, select, textarea, button, option, optgroup {
 /*	background: transparent url('../images/header-title-en.png') center center no-repeat;
 	width: 54px; height: 19px; */
 }
-
-.ui-widget { font-family: arial, verdana, segoe ui, sans-serif; }
-.ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: arial, verdana, segoe ui, sans-serif; }
