Fix path on sticker page

--- a/style/global.css
+++ b/style/global.css
@@ -610,6 +610,10 @@ span.title-empty {
 	overflow: auto;
 }
 
+.ui-widget-shadow {
+	display: none;
+}
+
 #window_login label {
 	font-weight: bold;
 }
